tumblery a pred grammarly

--- a/diplomka-text/citations.bib
+++ b/diplomka-text/citations.bib
@@ -104,7 +104,18 @@
   year={2013},
   publisher={Elsevier}
 }
-
+@inproceedings{soska2015measuring,
+  title={Measuring the Longitudinal Evolution of the Online Anonymous Marketplace Ecosystem.},
+  author={Soska, Kyle and Christin, Nicolas},
+  booktitle={USENIX Security Symposium},
+  pages={33--48},
+  year={2015}
+}
+@article{aldridge2014not,
+  title={Not an'Ebay for Drugs': the Cryptomarket'Silk Road'as a paradigm shifting criminal innovation},
+  author={Aldridge, Judith and D{\'e}cary-H{\'e}tu, David},
+  year={2014}
+}
 @inproceedings{wehinger2011dark,
   title={The Dark Net: Self-regulation dynamics of illegal online markets for identities and related services},
   author={Wehinger, Frank},
