--- a/diplomka-text/citations.bib
+++ b/diplomka-text/citations.bib
@@ -104,6 +104,16 @@
   year={2013},
   publisher={Elsevier}
 }
+@article{raghavan2007near,
+  title={Near linear time algorithm to detect community structures in large-scale networks},
+  author={Raghavan, Usha Nandini and Albert, R{\'e}ka and Kumara, Soundar},
+  journal={Physical review E},
+  volume={76},
+  number={3},
+  pages={036106},
+  year={2007},
+  publisher={APS}
+}
 @inproceedings{soska2015measuring,
   title={Measuring the Longitudinal Evolution of the Online Anonymous Marketplace Ecosystem.},
   author={Soska, Kyle and Christin, Nicolas},
