--- a/diplomka-text/fi-pdflatex.tex
+++ b/diplomka-text/fi-pdflatex.tex
@@ -716,6 +716,26 @@ The identities are stored as rows in csv files that have 3 collumns:
  \item nickname of the associated identity
 \end{enumerate}
 
+\section{Retrieving, storing and analyzing blockchain data}
+XXX - dodelat
+In order to create a tool, that will effectively search and visualize blockchain data,
+we need to store the blockchain locally in that way, so that common graph algorithms can be effectively executed.
+We ran the official bitcoin daemon (further referenced as bitcoind), to obtain a copy of bitcoin blockchain. Bitcoind st
+ore blockchain in multiple *.blk files.
+These files have structure, which is unfit for searching, processing and analysis of blockchain, so I used rusty-parser 
+to parse these files and create csv files of transactions, outputs and addresses.
+
+Then we imported these files into neo4j graph database, to have whole transaction graph in one place and be able to comp
+ute statistics and heuristics.
+All entities in the \ref{neo4jschema} are represented as graph nodes, the relationships between them are edges.
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=1\textwidth]{neo4j-schema}
+    \caption{Neo4j database ER diagram}
+    \label{neo4jschema}
+\end{figure}
+XXX - dodelat
+
 \section{Using own transactions to identify market wallets}
 
 Valhalla cryptomarket generates uniue deposit address for each new user.
@@ -832,40 +852,26 @@ asdf
 
 \section{Statistics about vendors, drugs availability and distribution and buyers satisfaction}
 
-
-
 \chapter{Application}
 
-This chapter describes the application for investigating bitcoin address.
+This chapter describes the application for searching in gathered data.
 The application consists of three parts.
-The scraping module, that downloads bitcoin blockchain and also scrape data from publicly available sites mention in sec
-tion XXX.
-The computanional module, which imports data to the database and also transform data. so that searching in these data wo
-uld be fast.
-The scraping, import and computanional modules are available for linux only.
-The GUI written in HTML/JS/CSS, that is connecting to neo4j database REST endpoint and provides visualisation of data.
-The GUI can be given a configuration string, to connect to neo4j REST API endpoint, so the gui can be viewed in broser f
-rom any device, as long as 
-the server with neo4j data is reachable from that device.
 
+\begin{itemize}
+ \item The scraping module, that downloads bitcoin blockchain and also scrapes data from publicly available sites mentioned in section XXX.
+ \item The computanional module, which imports data to the database, create indexes and compute heuristics from chapter XXX.
+ \item The web GUI written in HTML/JS/CSS for sending requests to webserver and visualisation of retrieved data. 
+ \item Webserver, that handles GUI requests and retrieve data from database.
+\end{itemize}
 
-\section{Retrieving, storing and analyzing blockchain data}
-In order to create a tool, that will effectively search and visualize blockchain data,
-we need to store the blockchain locally in that way, so that common graph algorithms can be effectively executed.
-We ran the official bitcoin daemon (further referenced as bitcoind), to obtain a copy of bitcoin blockchain. Bitcoind st
-ore blockchain in multiple *.blk files.
-These files have structure, which is unfit for searching, processing and analysis of blockchain, so I used rusty-parser 
-to parse these files and create csv files of transactions, outputs and addresses.
-
-Then we imported these files into neo4j graph database, to have whole transaction graph in one place and be able to comp
-ute statistics and heuristics.
-All entities in the \ref{neo4jschema} are represented as graph nodes, the relationships between them are edges.
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=1\textwidth]{neo4j-schema}
-    \caption{Neo4j database ER diagram}
-    \label{neo4jschema}
+    \includegraphics[scale=0.4]{total-rev}
+    \caption{Application architecture}
+    \label{Vendors by total revenue}
 \end{figure}
+
+
 
 \section{Implementation}
 
