predelany escaping u dat

--- a/diplomka-text/fi-pdflatex.tex
+++ b/diplomka-text/fi-pdflatex.tex
@@ -782,6 +782,9 @@ used by even advanced users.
 
 \section{Overall statistics of Valhalla drug market}
 
+We have found totally 
+
+
 Valhalla was originally founded as local Finnish market,
 that seems the reason for surprisingly many vendors shipping from Finland.
 The reader can see the frequency of countries the vendors are shipping from in table \ref{shipcount}.
