Nejake dalsi statistiky

--- a/diplomka-text/citations.bib
+++ b/diplomka-text/citations.bib
@@ -114,6 +114,15 @@
   year={2007},
   publisher={APS}
 }
+@article{aldridge2016hidden,
+  title={Hidden wholesale: The drug diffusing capacity of online drug cryptomarkets},
+  author={Aldridge, Judith and D{\'e}cary-H{\'e}tu, David},
+  journal={International Journal of Drug Policy},
+  volume={35},
+  pages={7--15},
+  year={2016},
+  publisher={Elsevier}
+}
 @inproceedings{soska2015measuring,
   title={Measuring the Longitudinal Evolution of the Online Anonymous Marketplace Ecosystem.},
   author={Soska, Kyle and Christin, Nicolas},
