pred anglickou verifikaci

--- a/diplomka-text/citations.bib
+++ b/diplomka-text/citations.bib
@@ -114,6 +114,16 @@
   year={2007},
   publisher={APS}
 }
+@article{resnick2000reputation,
+  title={Reputation systems},
+  author={Resnick, Paul and Kuwabara, Ko and Zeckhauser, Richard and Friedman, Eric},
+  journal={Communications of the ACM},
+  volume={43},
+  number={12},
+  pages={45--48},
+  year={2000},
+  publisher={ACM}
+}
 @article{aldridge2016hidden,
   title={Hidden wholesale: The drug diffusing capacity of online drug cryptomarkets},
   author={Aldridge, Judith and D{\'e}cary-H{\'e}tu, David},
