--- a/diplomka-text/citations.bib
+++ b/diplomka-text/citations.bib
@@ -26,7 +26,12 @@
   year={2014},
   organization={Springer}
 }
-
+@article{kalodner2017blocksci,
+  title={BlockSci: Design and applications of a blockchain analysis platform},
+  author={Kalodner, Harry and Goldfeder, Steven and Chator, Alishah and M{\"o}ser, Malte and Narayanan, Arvind},
+  journal={arXiv preprint arXiv:1709.02489},
+  year={2017}
+}
 @inproceedings{androulaki2013evaluating,
   title={Evaluating user privacy in bitcoin},
   author={Androulaki, Elli and Karame, Ghassan O and Roeschlin, Marc and Scherer, Tobias and Capkun, Srdjan},
